# telescope

./: .gitignore  Directive.yaml  Makefile  README.md
get-repo/: .runnable.yaml  Cargo.toml  get-repo.wasm
get-repo/src/: lib.rs
list-repos/: .runnable.yaml  Cargo.toml  list-repos.wasm
list-repos/src/: lib.rs
model/: Cargo.toml
model/src/: lib.rs
send-report/: Cargo.toml  send-report.wasm
send-report/src/: lib.rs
serve-file/: .runnable.yaml  Cargo.toml  serve-file.wasm
serve-file/src/: lib.rs
static/: index-5083c87f782f5046.js  index-a1f1da6187464704.css  index.html  organization  webhook
static/app/: index-7167aebf35b3f93f.js  index-7167aebf35b3f93f_bg.wasm  index-bc5073c892959899.js  index-bc5073c892959899_bg.wasm  index-e3ae0f2be3e16b2c.css  index-f18faccd48b69a77.js  index-f18faccd48b69a77_bg.wasm  index.html
telescope-web/: Cargo.toml  index.html  index.scss
telescope-web/app/: Cargo.toml
telescope-web/app/src/: api.rs  main.rs
telescope-web/src/: main.rs
